tests/typechecker/should_fail/maps2.csp
test1 = mapFromList(<(STOP, 1)>) == mapFromList(<(STOP, 1)>)
